Initializing changes to popup

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -133,7 +133,10 @@ layout: default
   -->
 </div>
 
+{% include book-modal.html %}
+
 <!-- Popup HTML -->
+ <!-- 
 <div id="book-popup" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background-color: #fff; border: 1px solid #ccc; z-index: 9999;">
   <h3>Get our book</h3>
   <p>We are so glad that you are enjoying our course! You can help support this project's development by picking up the textbook companion, which is available in both E-book and printed formats.</p>
@@ -146,8 +149,10 @@ layout: default
   </center>
 </div>
 <div id="popup-overlay" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 9998;"></div>
+-->
 
 <!-- JavaScript to trigger popup with a 60-second delay and show it once per day -->
+<!--
 <script>
   function openPopup() {
       document.getElementById('book-popup').style.display = 'block';
@@ -187,3 +192,4 @@ layout: default
       }
   };
 </script>
+-->
