--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
       Biological Modeling is licensed under
       <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>.
       <br>
-      © {{ site.time | date: '%Y' }} Carnegie Mellon University
+      © {{ site.time | date: '%Y' }} Phillip Compeau
     </div>
   </div>
 </footer>
