line break in popup

--- a/_includes/book-modal.html
+++ b/_includes/book-modal.html
@@ -9,7 +9,7 @@
   
       <h3 id="bm-title">Enjoying <em>Biological Modeling</em>?</h3>
       <p class="bm-blurb">
-        Help keep the course free. Grab the companion E-book from Leanpub or the print version from Amazon.
+        Help keep the course free!<br>Grab the companion E-book from Leanpub or the print version from Amazon.
       </p>
   
       <!-- CTA buttons -->
