making license text black

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
           <i class="fab fa-amazon"></i>
         </a>
         <a href="https://leanpub.com/biologicalmodeling" aria-label="Buy on Leanpub" target="_blank" rel="noopener">
-          <img src="{{ '/assets/leanpub.png' | relative_url }}" alt="Leanpub" height="20">
+          <img src="{{ '/assets/images/leanpub.png' | relative_url }}" alt="Leanpub" height="20">
         </a>
       </div>
 
