--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
       <!-- Brand (or text if logo unavailable) -->
       <div class="footer__brand">
-        <img src="{{ '/assets/images/cmu-wordmark-light.svg' | relative_url }}" alt="Carnegie Mellon University" height="28">
+        <img src="{{ '/assets/images/CMU_CBD_logos.png' | relative_url }}" alt="Carnegie Mellon University" height="28">
       </div>
 
       <!-- Quick nav: five modules + team + contact -->
