minor changes to licensing footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,10 +34,10 @@
 
     <!-- ——— 2nd row ——— -->
     <div class="footer__license">
-      Biological Modeling is licensed under
+      <em>Biological Modeling</em> is licensed under
       <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC&nbsp;BY-NC&nbsp;4.0</a>.
       <br>
-      © {{ site.time | date: '%Y' }} Phillip Compeau
+      © {{ site.time | date: '%Y' }} <a href="https://compeau.cbd.cmu.edu">Phillip Compeau</a>
     </div>
 
   </div><!-- /.wrapper -->
