--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,19 +49,20 @@ layout: default
           {% endif %}  
           <!-- Call to Action Buttons (visible on most pages) -->
           {% unless page.exclude_book_buttons %}
+          <h2><strong><em>Get the book!</em></strong></h2>
           <div class="sidebar-cta">
             <a href="https://leanpub.com/biologicalmodeling"
                class="btn btn--store"
                target="_blank" rel="noopener">
               <img src="{{ '/assets/images/leanpub-logo.svg' | relative_url }}" class="store-icon" alt="" />
-              Leanpub&nbsp;E-book
+              E-book (Leanpub)
             </a>
           
             <a href="https://www.amazon.com/dp/B0BT6B2B8W"
                class="btn btn--store"
                target="_blank" rel="noopener">
               <i class="fab fa-amazon store-icon" aria-hidden="true"></i>
-              Amazon&nbsp;Print
+              Print Companion (Amazon)
             </a>
           </div>
           {% endunless %}
