better link colors and tighter buttons

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -54,7 +54,7 @@ layout: default
             <a href="https://leanpub.com/biologicalmodeling"
                class="btn btn--store"
                target="_blank" rel="noopener">
-              <img src="{{ '/assets/images/leanpub-logo.svg' | relative_url }}" class="store-icon" alt="" />
+              <img src="{{ '/assets/images/leanpub.png' | relative_url }}" class="store-icon" alt="" />
               E-book (Leanpub)
             </a>
           
@@ -62,7 +62,7 @@ layout: default
                class="btn btn--store"
                target="_blank" rel="noopener">
               <i class="fab fa-amazon store-icon" aria-hidden="true"></i>
-              Print Companion (Amazon)
+              Print Companion
             </a>
           </div>
           {% endunless %}
