button override color

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,7 +49,7 @@ layout: default
           {% endif %}  
           <!-- Call to Action Buttons (visible on most pages) -->
           {% unless page.exclude_book_buttons %}
-          <h2><strong><em>Get the book!</em></strong></h2>
+          <center><h2><strong><em>Get the book!</em></strong></h2></center>
           <div class="sidebar-cta">
             <a href="https://leanpub.com/biologicalmodeling"
                class="btn btn--store"
