--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -102,6 +102,15 @@ search: false
 /* if you want the Font-Awesome Amazon icon to change too */
 .btn--book:hover .fa-amazon { color:#c41230 !important; }
 
+/* ---- Buy-the-Book buttons ---------------------------------- */
+.btn--book,
+.btn--book:visited                { color:#000 !important; }   /* normal state */
+
+.btn--book:hover                  { color:#c41230 !important; } /* CMU red */
+.btn--book:hover .fa-amazon       { color:#c41230 !important; } /* Amazon icon */
+.btn--book:hover img.book-icon    { filter: hue-rotate(-15deg) saturate(180%); }
+/* ^ optional: nudges Leanpub PNG toward red; delete if you prefer no change */
+
 /* Footer updates */
 
 /* footer link color on hover */
