updating footer link + cmu logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
       <!-- Brand (or text if logo unavailable) -->
       <div class="footer__brand">
-        <img src="{{ '/assets/images/CMU_CBD_logos.png' | relative_url }}" alt="Carnegie Mellon University" height="28">
+        <a href="https://cmu.edu" target="_blank"><img src="{{ '/assets/images/cmu_horizontal_red.png' | relative_url }}" alt="Carnegie Mellon University" height="28"></a>
       </div>
 
       <!-- Quick nav: five modules + team + contact -->
