--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -50,19 +50,23 @@ layout: default
           <!-- Call to Action Buttons (visible on most pages) -->
           {% unless page.exclude_book_buttons %}
           <center><h2><strong><em>Get the book!</em></strong></h2></center>
-          <div class="sidebar-cta">
+          <div class="sidebar-book">
+
+            <h4 class="sidebar-heading">Get the Book!</h4>
+            <hr class="sidebar-rule">
+          
             <a href="https://leanpub.com/biologicalmodeling"
-               class="btn btn--store"
+               class="btn--book"
                target="_blank" rel="noopener">
-              <img src="{{ '/assets/images/leanpub.png' | relative_url }}" class="store-icon" alt="" />
-              E-book (Leanpub)
+               <img src="{{ '/assets/leanpub.png' | relative_url }}" class="book-icon" alt="">
+               E-book (Leanpub)
             </a>
           
             <a href="https://www.amazon.com/dp/B0BT6B2B8W"
-               class="btn btn--store"
+               class="btn--book"
                target="_blank" rel="noopener">
-              <i class="fab fa-amazon store-icon" aria-hidden="true"></i>
-              Print Companion
+               <i class="fab fa-amazon book-icon" aria-hidden="true"></i>
+               Print Companion
             </a>
           </div>
           {% endunless %}
