--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       <em>Biological Modeling</em> is licensed under
       <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC&nbsp;BY-NC&nbsp;4.0</a>.
       <br>
-      © {{ site.time | date: '%Y' }} <a href="https://compeau.cbd.cmu.edu">Phillip Compeau</a>
+      © {{ site.time | date: '%Y' }} <a href="https://compeau.cbd.cmu.edu" target="_blank">Phillip Compeau</a>
     </div>
 
   </div><!-- /.wrapper -->
