--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,10 +49,9 @@ layout: default
           {% endif %}  
           <!-- Call to Action Buttons (visible on most pages) -->
           {% unless page.exclude_book_buttons %}
-          <center><h2><strong><em>Get the book!</em></strong></h2></center>
           <div class="sidebar-book">
 
-            <h4 class="sidebar-heading">Get the Book!</h4>
+            <center><h2 class="sidebar-heading"><em>Get the Book!</em></h2></center>
             <hr class="sidebar-rule">
           
             <a href="https://leanpub.com/biologicalmodeling"
@@ -71,7 +70,7 @@ layout: default
           </div>
           {% endunless %}
           <div class="social-share-icons" style="margin-top: 1rem; text-align: center;">
-            <h2><strong><em>Share us!</em></strong></h2>
+            <h2><em>Share us!</em></h2>
           
             {% assign linkedin_text = "Check out this free educational website on biological modeling. It's ideal for students, educators, and science lovers." | url_encode %}
             {% assign x_text = "Check out this awesome free educational platform on biological modeling!" | url_encode %}
