broken link to image

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -55,7 +55,7 @@ layout: default
             <a href="https://leanpub.com/biologicalmodeling"
                class="btn--book"
                target="_blank" rel="noopener">
-               <img src="{{ '/assets/leanpub.png' | relative_url }}" class="book-icon" alt="">
+               <img src="{{ '/assets/images/leanpub.png' | relative_url }}" class="book-icon" alt="">
                E-book (Leanpub)
             </a>
           
