--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -51,7 +51,7 @@ layout: default
           {% unless page.exclude_book_buttons %}
           <div class="sidebar-book">
 
-            <center><h2 class="sidebar-heading"><em>Get the Book!</em></h2></center>          
+            <center><h2 class="sidebar-heading"><em>Get the book!</em></h2></center>          
             <a href="https://leanpub.com/biologicalmodeling"
                class="btn--book"
                target="_blank" rel="noopener">
