black text in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 
       <!-- Store links with label -->
       <div class="footer__stores">
-        <span>Buy the Book:</span>
+        <span style="color: black;">Buy the Book:</span>
         <a href="https://www.amazon.com/dp/B0BT6B2B8W" aria-label="Buy on Amazon" target="_blank" rel="noopener">
           <i class="fab fa-amazon"></i>
         </a>
