--- a/_includes/book-modal.html
+++ b/_includes/book-modal.html
@@ -7,9 +7,16 @@
         <i class="fas fa-times"></i>
       </button>
   
+      <!-- NEW: cover image -->
+      <img src="{{ '/assets/images/cover_3d_paperback.jpg' | relative_url }}"
+           alt="Biological Modeling book cover"
+           class="bm-cover">
+  
       <h3 id="bm-title">Enjoying <em>Biological Modeling</em>?</h3>
+  
       <p class="bm-blurb">
-        Help keep the course free!<br>Grab the companion E-book from Leanpub or the print version from Amazon.
+        Help keep the course free!<br>
+        Grab the companion E-book from Leanpub or the print edition from Amazon.
       </p>
   
       <!-- CTA buttons -->
@@ -17,18 +24,18 @@
         <a href="https://leanpub.com/biologicalmodeling"
            class="btn btn--primary btn--large bm-btn"
            target="_blank" rel="noopener">
-          Buy on&nbsp;Leanpub ($9.95)
+          Leanpub&nbsp;E-book&nbsp;($9.95)
         </a>
   
         <a href="https://www.amazon.com/dp/B0BT6B2B8W"
            class="btn btn--primary btn--large bm-btn"
            target="_blank" rel="noopener">
           <i class="fab fa-amazon bm-icon" aria-hidden="true"></i>
-          Buy on&nbsp;Amazon
+          Amazon&nbsp;Print
         </a>
       </div>
   
-      <!-- Social share (same icons we use in sidebar) -->
+      <!-- Social share -->
       <div class="bm-share">
         <span class="bm-share__label">Share our project:</span>
         {% assign linkedin_text = "Explore this free biological-modeling course!" | url_encode %}
@@ -36,9 +43,9 @@
         {% assign reddit_text  = "Great free website that teaches biological modeling through projects." | url_encode %}
   
         <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}&title={{ linkedin_text }}" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
-        <a href="https://twitter.com/intent/tweet?text={{ x_text }}&url={{ page.url | absolute_url }}" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.reddit.com/submit?url={{ page.url | absolute_url }}&title={{ reddit_text }}" target="_blank" rel="noopener"><i class="fab fa-reddit"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/intent/tweet?text={{ x_text }}&url={{ page.url | absolute_url }}"                 target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.reddit.com/submit?url={{ page.url | absolute_url }}&title={{ reddit_text }}"             target="_blank" rel="noopener"><i class="fab fa-reddit"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}"                           target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
         <a href="{{ page.url | absolute_url }}"><i class="fas fa-link"></i></a>
       </div>
   
@@ -46,7 +53,6 @@
   </div>
   
   <div id="bm-backdrop" class="bm-backdrop" onclick="bmClose()"></div>
-
 
   <script>
     function bmOpen() {
