broken link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
       <!-- Simple nav: home, team, contact -->
       <nav class="footer__nav">
         <a href="{{ '/'               | relative_url }}">Home</a>
-        <a href="{{ '/about/team/'     | relative_url }}">Team</a>
+        <a href="{{ '/meet-the-team/'     | relative_url }}">Team</a>
         <a href="{{ '/contact/'        | relative_url }}">Contact</a>
       </nav>
 
