--- a/_includes/book-modal.html
+++ b/_includes/book-modal.html
@@ -15,7 +15,6 @@
       <h3 id="bm-title">Enjoying <em>Biological Modeling</em>?</h3>
   
       <p class="bm-blurb">
-        Help keep the course free!<br>
         Grab the companion E-book from Leanpub or the print edition from Amazon.
       </p>
   
@@ -31,13 +30,13 @@
            class="btn btn--primary btn--large bm-btn"
            target="_blank" rel="noopener">
           <i class="fab fa-amazon bm-icon" aria-hidden="true"></i>
-          Amazon&nbsp;Print
+          Print Companion
         </a>
       </div>
   
       <!-- Social share -->
       <div class="bm-share">
-        <span class="bm-share__label">Share our project:</span>
+        <h3 id="bm-title">Share our project!</h3>
         {% assign linkedin_text = "Explore this free biological-modeling course!" | url_encode %}
         {% assign x_text       = "Check out this awesome free resource on biological modeling!" | url_encode %}
         {% assign reddit_text  = "Great free website that teaches biological modeling through projects." | url_encode %}
